# RiskSense

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  credit_risk_system.ipynb  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
notebooks/: README.md
scripts/: predict.py  train.py
src/risksense/: __init__.py  config.py  data.py  evaluation.py  explainability.py  features.py  models.py  pipeline.py  predict.py  tracking.py
tests/: test_features.py
